<resources>
    <string name="app_name">KeepInTouch</string>
    <string name="app_header">KeepInTouch app</string>
    <string name="once_a_week">Once a week</string>
    <string name="once_a_month">Once a month</string>
    <string name="once_every_six_month">Once every six month</string>
    <string name="once_a_year">Once a year</string>
    <string name="never">never</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_priority">set priority</string>
    <string name="profile_photo">profile photo</string>
    <string name="add_contacts_to_app">choose your friends</string>
    <string name="accept_button">Accept button</string>
    <string name="back_button">back button</string>
    <string name="accept_add">accept add</string>
    <string name="cancel_change">cancel change</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="year">year</string>
    <string name="half_year">half year</string>
    <string name="month">month</string>
    <string name="week">week</string>
    <string name="whatsappMessage">שלום! הרבה זמן לא דיברנו, מתי מתאים לך לדבר?</string>
    <string name="ploni_almoni">Ploni Almoni</string>
    <string name="numbers">+1 234 567 890</string>
    <string name="search_name_to_add_friend">חפש שם על מנת להוסיף חברים</string>
    <string name="press_to_add_friends">לחץ על ה \'+\' כדי להוסיף חברים</string>
    <string name="key_whatsapp_message">whatsappMessage</string>
    <string name="pref_name">MyPrefs</string>
    <string name="settings">settings</string>
    <string name="edit_preference">edit preference</string>
    <string name="key_time_to_notification">timeToNotificationKey</string>


    <string name="contact_image">תמונת איש קשר</string>
    <string name="status_info">מידע נוסף</string>
    <string name="birthday_info">יום הולדת</string>
    <string name="reminder_on">תזכורת מופעלת</string>
    <string name="reminder_off">תזכורת מכובה</string>
    <string name="tap_to_edit_birthday">לחץ לעריכת תאריך לידה</string>
    <string name="call_contact">התקשר לאיש קשר</string>


</resources>