<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/bg_card"
    >

    <!-- Contact Item Container -->
    <LinearLayout
        android:id="@+id/contactItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Profile Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/profile_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24"
            android:background="@drawable/bg_profile"
            app:shapeAppearanceOverlay="@style/CircularShape"
             />

        <!-- Contact Info -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TitleText"
                android:text="@string/ploni_almoni" />

            <TextView
                android:id="@+id/tv_number"
                style="@style/SubText"
                android:text="@string/numbers" />

            <TextView
                android:id="@+id/tv_contact_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Priority & Edit Icons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_priority"
                style="@style/PriorityText"
                android:text="High" />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="edit_icon"
                android:src="@drawable/round_edit_note_24"
                android:visibility="gone"
                app:tint="@color/primary"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Priority Selection -->
    <RadioGroup
        android:id="@+id/rg_priority1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/contactItem"
        android:background="@drawable/bg_card"
        android:elevation="4dp">

        <RadioButton
            android:id="@+id/rb_week"
            style="@style/PriorityRadioButton"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/rb_month"
            style="@style/PriorityRadioButton"
            android:text="@string/month" />

        <RadioButton
            android:id="@+id/rb_half_year"
            style="@style/PriorityRadioButton"
            android:text="@string/half_year" />

        <RadioButton
            android:id="@+id/rb_year"
            style="@style/PriorityRadioButton"
            android:text="@string/year" />

        <RadioButton
            android:id="@+id/never"
            style="@style/PriorityRadioButton"
            android:text="@string/never" />
    </RadioGroup>

    <!-- Call Actions -->
    <LinearLayout
        android:id="@+id/call_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/contactItem">

        <ImageView
            android:id="@+id/iv_whatsapp"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="whatsapp_img"
            android:src="@drawable/whatsapp_logo_wine" />

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="phone_img"
            android:src="@drawable/baseline_call_24"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
